<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario"
    android:background="@drawable/fondo">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="126dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_user_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="76dp"
        android:text="TextView"
        android:textColor="#ffff"
        android:textSize="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_Change"
        android:layout_width="237dp"
        android:layout_height="51dp"
        android:layout_marginTop="88dp"
        android:onClick="editar_usuario"
        android:text="@string/btn_editar_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_usuario" />

    <Button
        android:id="@+id/btn_Close"
        android:layout_width="237dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:onClick="cerrar"
        android:text="CERRAR SESSION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Change" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/muestra_correo"
        android:textColor="#ffff"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_usuario" />

    <TextView
        android:id="@+id/txt_ver_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="140dp"
        android:text="TextView"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_usuario" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_fab_label="OPCIONES">

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="ver_clientes"
            android:src="@drawable/ic_ojo"
            app:fab_colorNormal="#302C2C"
            app:fab_label="Ver Recomendaciones">

        </com.github.clans.fab.FloatingActionButton>

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="recomendar"
            android:src="@drawable/ic_person"
            app:fab_colorNormal="#302C2C"
            app:fab_label="Recomendar Clientes">

        </com.github.clans.fab.FloatingActionButton>
    </com.github.clans.fab.FloatingActionMenu>

    <TextView
        android:layout_width="158dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>